--- a/frontend/src/components/Header/index.css
+++ b/frontend/src/components/Header/index.css
@@ -21,7 +21,7 @@ header nav ul li{
 }
 
 header nav ul li a{
-    color: #63B446;
+    color: #b60505;
     text-decoration: none;
 }
 header nav ul li a:hover{
